--- a/src/components/accounts/Account.module.css
+++ b/src/components/accounts/Account.module.css
@@ -1,10 +1,12 @@
-.tableHeader {
-	background-color: black;
-	font-style: italic;
-	font-size: 21px;
+.search {
+	color: #034679;
 }
 
 .title {
-	/* font-family: 'Helvetica, sans-serif' */
+	padding-left: 2.66em;
+	text-align: center;
+	font-family: 'Verdana, Geneva, Tahoma, sans-serif';
+	font-size: 2.2em;
+	color: rgb(6, 8, 6);
 }
 
